force-app/main/default/objects/Account/fields/Account_Status_for_Master_Calling__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_for_Master_Calling__c</fullName>
    <label>Account Status for Master Calling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>