force-app/main/default/objects/Account/fields/Active_for_MCL__c.field-meta.xml
<CustomField>
    <fullName>Active_for_MCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active for MCL</label>
    <type>Checkbox</type>
</CustomField>