force-app/main/default/objects/Account/fields/Address_Information__c.field-meta.xml
<CustomField>
    <fullName>Address_Information__c</fullName>
    <label>Address Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>