force-app/main/default/objects/Account/fields/Annual_Revenue_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Last_Year__c</fullName>
    <label>Annual Revenue Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>