force-app/main/default/objects/Account/fields/Aspired_Revenue_for_The_Year__c.field-meta.xml
<CustomField>
    <fullName>Aspired_Revenue_for_The_Year__c</fullName>
    <label>Aspired Revenue for The Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>