force-app/main/default/objects/Account/fields/Business_To_HCG_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Business_To_HCG_Last_Year__c</fullName>
    <label>Business To HCG Last Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>