force-app/main/default/objects/Account/fields/Commercials_Current__c.field-meta.xml
<CustomField>
    <fullName>Commercials_Current__c</fullName>
    <label>Commercials Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>