force-app/main/default/objects/Account/fields/Commercials_Expected__c.field-meta.xml
<CustomField>
    <fullName>Commercials_Expected__c</fullName>
    <label>Commercials Expected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>