force-app/main/default/objects/Account/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Clinic / Hospital Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>