force-app/main/default/objects/Account/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>