force-app/main/default/objects/Account/fields/Date_of_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Anniversary__c</fullName>
    <label>Date of Anniversary</label>
    <type>Date</type>
</CustomField>