force-app/main/default/objects/Account/fields/Doctor_Type__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Type__c</fullName>
    <label>Doctor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>