force-app/main/default/objects/Account/fields/Focus_Countries__c.field-meta.xml
<CustomField>
    <fullName>Focus_Countries__c</fullName>
    <label>Focus Countries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>