force-app/main/default/objects/Account/fields/GMV_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>GMV_Last_Year__c</fullName>
    <label>GMV Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>