force-app/main/default/objects/Account/fields/Health_Care_Spend_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Spend_Last_Year__c</fullName>
    <label>Health Care Spend Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>