force-app/main/default/objects/Account/fields/HIS_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>HIS_Unique_Number__c</fullName>
    <label>HIS Unique Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>