force-app/main/default/objects/Account/fields/HIS_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>HIS_Update_Status__c</fullName>
    <label>HIS Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>