force-app/main/default/objects/Account/fields/Insurance_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Broker_Name__c</fullName>
    <label>Insurance Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>