force-app/main/default/objects/Account/fields/IsAddInMCL__c.field-meta.xml
<CustomField>
    <fullName>IsAddInMCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAddInMCL</label>
    <type>Checkbox</type>
</CustomField>