force-app/main/default/objects/Account/fields/Last_Account_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Update__c</fullName>
    <label>Last Account Update</label>
    <type>Date</type>
</CustomField>