force-app/main/default/objects/Account/fields/Market_Share_To_HCG__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_To_HCG__c</fullName>
    <label>Market Share To HCG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>