force-app/main/default/objects/Account/fields/NameDOBKey__c.field-meta.xml
<CustomField>
    <fullName>NameDOBKey__c</fullName>
    <formula>LOWER( SUBSTITUTE(Name, &quot; &quot;, &quot;&quot;)+ TEXT( Date_of_Birth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameDOBKey</label>
    <type>Text</type>
</CustomField>