force-app/main/default/objects/Account/fields/NPD_Doctor__c.field-meta.xml
<CustomField>
    <fullName>NPD_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPD Doctor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>