force-app/main/default/objects/Account/fields/Oncology_Shared_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Oncology_Shared_Last_Year__c</fullName>
    <label>Oncology Shared Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>