force-app/main/default/objects/Account/fields/OPD_PTS_Seen_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>OPD_PTS_Seen_Per_Day__c</fullName>
    <label>OPD PTS Seen Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>