force-app/main/default/objects/Account/fields/Other_Partner_Hospitals__c.field-meta.xml
<CustomField>
    <fullName>Other_Partner_Hospitals__c</fullName>
    <label>Other Partner Hospitals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>