force-app/main/default/objects/Account/fields/Other_Partnered_hospitals__c.field-meta.xml
<CustomField>
    <fullName>Other_Partnered_hospitals__c</fullName>
    <label>Other Partnered hospitals</label>
    <type>TextArea</type>
</CustomField>