force-app/main/default/objects/Account/fields/Perception_Score__c.field-meta.xml
<CustomField>
    <fullName>Perception_Score__c</fullName>
    <label>Perception Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>