force-app/main/default/objects/Account/fields/SAP_Unique_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Unique_Account_Code__c</fullName>
    <label>SAP Unique Account Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>