force-app/main/default/objects/Account/fields/Sent_to_HIS_flag__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_HIS_flag__c</fullName>
    <formula>IF( Sent_To_HIS__c= true,&quot;        &quot;+IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Flag&quot;),&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent to HIS</label>
    <type>Text</type>
</CustomField>