force-app/main/default/objects/Account/fields/Sent_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To SAP</label>
    <type>Checkbox</type>
</CustomField>