force-app/main/default/objects/Account/fields/Sent_To_SAP_flag__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_SAP_flag__c</fullName>
    <formula>IF( Sent_To_SAP__c= true,&quot;        &quot;+IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;),&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent To SAP</label>
    <type>Text</type>
</CustomField>