force-app/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialty</label>
    <referenceTo>Specialty__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>