force-app/main/default/objects/Account/fields/Status_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Account__c</fullName>
    <label>Status of Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>