force-app/main/default/objects/Account/fields/Total_Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Contract__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Active Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>