force-app/main/default/objects/Account/fields/Total_Bill__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill__c</fullName>
    <label>Total Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>