force-app/main/default/objects/Account/fields/TPA__c.field-meta.xml
<CustomField>
    <fullName>TPA__c</fullName>
    <label>TPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>