force-app/main/default/objects/Account/fields/UHID_Number__c.field-meta.xml
<CustomField>
    <fullName>UHID_Number__c</fullName>
    <label>UHID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>