force-app/main/default/objects/Account/fields/Update_Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Update_Request_Date_Time__c</fullName>
    <label>Update Request Date/Time</label>
    <type>DateTime</type>
</CustomField>