force-app/main/default/objects/Account/fields/Upsell_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Opportunity__c</fullName>
    <label>Upsell Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemotherapy</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Health Checks</fullName>
            </value>
            <value>
                <fullName>Hematology and BMT</fullName>
            </value>
            <value>
                <fullName>InPatient</fullName>
            </value>
            <value>
                <fullName>Medical Oncology</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine</fullName>
            </value>
            <value>
                <fullName>OutPatient</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Surgical Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>