force-app/main/default/objects/Account/recordTypes/Corporate_Partner.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Partner</fullName>
    <active>true</active>
    <label>Corporate Partner</label>
</RecordType>