force-app/main/default/objects/Account/recordTypes/International_Partner.recordType-meta.xml
<RecordType>
    <fullName>International_Partner</fullName>
    <active>true</active>
    <label>International Partner</label>
</RecordType>