force-app/main/default/objects/Account/recordTypes/Retail_Partner.recordType-meta.xml
<RecordType>
    <fullName>Retail_Partner</fullName>
    <active>true</active>
    <label>Retail Partner</label>
</RecordType>