force-app/main/default/objects/Account/validationRules/Phone_Number_valdation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_valdation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(if(Phone != &apos;&apos;,
NOT(OR(REGEX( Phone, &quot;^[0-9]{10}&quot;))),
false
),  BillingCountry  =&apos;India&apos;)</errorConditionFormula>
    <errorMessage>Please Fill Correct Phone Number</errorMessage>
</ValidationRule>