force-app/main/default/objects/Account/listViews/Integration_View.listView-meta.xml
<ListView>
    <fullName>Integration_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Sent_to_HIS_flag__c</columns>
    <columns>Sent_To_SAP_flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>Integration View</label>
</ListView>