force-app/main/default/objects/Account/listViews/Patients.listView-meta.xml
<ListView>
    <fullName>Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>HIS_Unique_Number__c</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Patient</value>
    </filters>
    <label>Patients</label>
</ListView>