force-app/main/default/objects/Account/listViews/Retail_Partners.listView-meta.xml
<ListView>
    <fullName>Retail_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Retail_Partner</value>
    </filters>
    <label>Retail Partners</label>
</ListView>